# case-flow-ai

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: .env.example  pyproject.toml  后端说明.md
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/config/: feishu_issue.example.json  feishu_project.example.json  markdown_import.5level.example.json  markdown_import.example.json  markdown_import.json
backend/scripts/: e2e_ai_api.py  hybrid_harness.py
backend/tests/: test_agent_assistant.py  test_ai_api_direct_route.py  test_ai_api_execution_service.py  test_ai_api_kernel.py  test_ai_api_runtime.py  test_ai_hybrid_evidence.py  test_ai_hybrid_function_map_ctx.py  test_ai_hybrid_reasoner.py  test_ai_hybrid_report_observer.py  test_ai_hybrid_reporter.py  test_ai_hybrid_runner.py  test_ai_hybrid_service.py  test_ai_hybrid_tools.py  test_bug_submit.py  test_case_asset_edit.py  test_case_tagging.py  test_execution_call_log.py  test_execution_reset.py  test_execution_stop_hook.py  test_executor_cancellation.py  test_executor_devices.py  test_feishu_mapping.py  test_feishu_project_mcp.py  test_function_map_asset.py  test_function_map_compile.py  test_function_map_mount.py  test_health.py  test_import_collision.py  test_markdown_export.py  test_model_json_types.py  test_multiend_diagnosis.py  test_public_startup.py  test_quick_ai_api_execution_service.py  test_quick_callback_errors.py  test_quick_markdown.py  test_repair_policy.py  test_report_reader.py  test_requirement_item_auto_discovery.py  (+4 more)
docs/: 产品范围.md  (+23 more)
(+179 files in other folders)
